# dj-uploader

./: .gitignore  BUILD.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
assets/: dj-uploader.icns
scripts/: 1password-seed.sh  README.md  create-release.sh  with-1password.sh  with-appstore-key.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  config.json.example  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: artwork.rs  audio.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs
src/app/: globals.css
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  date-picker-input.tsx  input.tsx  popover.tsx  textarea.tsx
src/components/ui/glass/: card.tsx  date-picker-input.tsx
src/lib/: api.ts  glass-utils.ts  types.ts
src/styles/: app.css
